## Transmission Suite

DIST_SUBDIRS = buildtools mhegc dss tsdemux png2rgb

if BUILD_MHEGC
MHEGC_SUBDIRS = mhegc
endif

if BUILD_DSS
DSS_SUBDIRS = dss
endif

if BUILD_TSDEMUX
TSDEMUX_SUBDIRS = tsdemux
endif

if BUILD_PNG2RGB
PNG2RGB_SUBDIRS = png2rgb
endif

SUBDIRS = \
	${MHEGC_SUBDIRS} \
	${DSS_SUBDIRS} \
	${TSDEMUX_SUBDIRS} \
	${PNG2RGB_SUBDIRS}


