## Transmission Suite

DIST_SUBDIRS = buildtools mhegc dss tsdemux png2rgb mpeg4ip schroedinger

if BUILD_MHEGC
MHEGC_SUBDIRS = mhegc
endif

if BUILD_DSS
DSS_SUBDIRS = dss
endif

if BUILD_TSDEMUX
TSDEMUX_SUBDIRS = tsdemux
endif

if BUILD_PNG2RGB
PNG2RGB_SUBDIRS = png2rgb
endif

if BUILD_TSTOOLS
TSTOOLS_SUBDIRS = tstools
endif

if BUILD_MPEG4IP
MPEG4IP_SUBDIRS = mpeg4ip
endif

if BUILD_SCHROEDINGER
SCHROEDINGER_SUBDIRS = schroedinger
endif

SUBDIRS = \
	${MHEGC_SUBDIRS} \
	${DSS_SUBDIRS} \
	${TSDEMUX_SUBDIRS} \
	${PNG2RGB_SUBDIRS} \
	${TSTOOLS_SUBDIRS} \
	${MPEG4IP_SUBDIRS} \
	${SCHROEDINGER_SUBDIRS}


